# eleutheria-telos

./: .gitignore  AI_TIER_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CLAUDE.md  CURSOR.md  DECISIONS.md  DESIGN.md  IDEAS.md  LOCAL_NETWORK_SYNC_SPEC.md  PHOTO_LIBRARY_SPEC.md  PRINCIPLES.md  README.md  ROADMAP.md  STATUS.md  UI_BRIEF.md  VIRTUAL_MIC_SPEC.md  WORKTREE.md  test-pipeline-h4.yaml
.github/workflows/: build.yml  ci.yml  release.yml
playwright-review/: package-lock.json  package.json  playwright.config.js
playwright-review/tests/: visual.spec.js
plugins/: README.md
plugins/hello-node/: main.js  manifest.json
plugins/hello-python/: main.py  manifest.json
scripts/: install_argos_package.py  rembg_remove.py  requirements.txt  transcribe.py  translate.py  uninstall_argos_package.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_phase1_indexes.sql  003_phase2_models.sql  004_phase4_pipelines.sql  005_pipeline_graph.sql  006_pipeline_folders.sql  007_clipboard_image.sql  008_clipboard_pin.sql  009_note_tags.sql  010_trash.sql  011_note_links.sql
src-tauri/src/: api.rs  db.rs  event_bus.rs  i18n.rs  lib.rs  mcp.rs  plugin_loader.rs  plugins.rs  server.rs
src-tauri/src/tools/: audio_recorder.rs  clipboard.rs  mod.rs  models.rs  notes.rs  ocr.rs  photo_editor.rs  quick_actions.rs  screen_recorder.rs  search.rs  translate.rs  video_processor.rs  voice.rs
tests/fixtures/: test-pipeline-h4.yaml
ui/: index.html  shell.html
ui/assets/: base.css
ui/assets/themes/: catppuccin-latte.css  catppuccin-mocha.css  dark.css  light.css  tokyo-night.css
ui/locales/: en.json
ui/tools/audio-recorder/: index.html
ui/tools/clipboard/: index.html
ui/tools/models/: index.html
ui/tools/notes/: index.html
ui/tools/ocr/: index.html
ui/tools/photo-editor/: index.html
ui/tools/plugin-store/: index.html
ui/tools/quick-actions/: index.html
ui/tools/screen-recorder/: index.html
ui/tools/search/: index.html
ui/tools/settings/: index.html
ui/tools/translate/: index.html
ui/tools/video-processor/: index.html
ui/tools/voice/: index.html
