[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eleutheria-mcp"
path = "src/bin/mcp_stdio.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }  # Used for: clipboard monitoring (Wayland via wlr-data-control) | pinned: 2026-03-18
axum = { version = "0.7", features = ["json", "multipart"] }      # Used for: internal HTTP server + image upload | pinned: 2026-03-18
log = "0.4"                                                        # Used for: logging | pinned: 2026-03-18
serde = { version = "1.0", features = ["derive"] }                # Used for: JSON serialization | pinned: 2026-03-18
serde_json = "1.0"                                                 # Used for: JSON handling | pinned: 2026-03-18
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] } # Used for: SQLite + FTS5 | pinned: 2026-03-18
tauri = { version = "2.10.3", features = ["tray-icon"] }           # Used for: desktop shell + system tray | pinned: 2026-03-18
tauri-plugin-log = "2"                                             # Used for: logging plugin | pinned: 2026-03-18
tracing = "0.1"                                                    # Used for: observability | pinned: 2026-03-18
uuid = { version = "1.0", features = ["v4"] }                     # Used for: unique IDs | pinned: 2026-03-18
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "fs", "process", "io-std"] } # Used for: async runtime + watch channels + fs + subprocess + MCP binary stdio | pinned: 2026-03-18
tower-http = { version = "0.5", features = ["cors"] }              # Used for: CORS headers (Tauri WebView → Axum) | pinned: 2026-03-18
reqwest    = { version = "0.12", features = ["stream", "json"] }   # Used for: streaming model downloads + JSON response parsing (MCP binary) | pinned: 2026-03-18
base64     = "0.22"                                                # Used for: decode canvas PNG dataURL for photo export | pinned: 2026-03-19
tokio-stream = { version = "0.1" }                                 # Used for: ReceiverStream wrapping mpsc channel for MCP SSE transport | pinned: 2026-03-19

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }                    # Used for: ServiceExt::oneshot() in route integration tests | pinned: 2026-03-18
http-body-util = "0.1"                                              # Used for: collecting response body bytes in tests | pinned: 2026-03-18
